# data-analysis01

bike-stats/: bike-stats.ipynb  pyproject.toml  weather.csv
data-visualization/: README.md  pyproject.toml  viz-a.ipynb  viz-b.ipynb
linear-regression/: pyproject.toml  regression.ipynb
text-classifier/: pyproject.toml  text_classifier.ipynb
vg-stats/: pyproject.toml  vg-stats.ipynb
