[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Richard Whitehead <damian253@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
seaborn = "^0.10.1"
numpy = "^1.19.0"
jupyter = "^1.0.0"
lab = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
