[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Richard Whitehead <damian253@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.5"
pandas = "^1.0.5"
matplotlib = "^3.2.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
