[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Richard Whitehead <damian253@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
numpy = "^1.19.0"
jupyter = "^1.0.0"
sklearn = "^0.0"
scikit-learn = "^0.23.1"
tensorflow = "^2.2.0"
keras = "^2.4.3"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
